# mock-snmp-agent

./: .gitignore  .pre-commit-config.yaml  ADVANCED_TESTING_GUIDE.md  ADVANCED_USAGE_GUIDE.md  API_EXAMPLES.md  API_TESTING_GUIDE.md  BEST_PRACTICES_GUIDE.md  CI_FIXES.md  CLAUDE.md  COMPLETION_REPORT.md  CONFIGURATION_GUIDE.md  Dockerfile  Dockerfile.enhanced  Dockerfile.extended  Dockerfile.minimal  Dockerfile.test-runner  ENHANCED_CAPABILITIES.md  GITHUB_PUBLICATION_PLAN.md  IFXTABLE_IMPLEMENTATION_PLAN.md  IFXTABLE_IMPLEMENTATION_SUMMARY.md  LICENSE  Makefile  Mock SNMP Agent PRD Enhancement Analys.md  PERFORMANCE_RESULTS.md  PRD.md  PRD_IMPLEMENTATION_PLAN.md  PRD_TESTING_STRATEGY.md  PROJECT_STRUCTURE.md  PROMETHEUS_SNMP_EXPORTER_TESTING.md  PYLINT_IMPROVEMENTS.md  REACT_UI_PROJECT_PLAN.md  README.md  README_OLD.md  REST_API_DOCUMENTATION.md  SCRIPT_CONSOLIDATION_PLAN.md  SCRIPT_TEST_SUMMARY.md  SNMP_COMMANDS_REFERENCE.md  TESTING_SUMMARY.md  TROUBLESHOOTING.md  TROUBLESHOOTING_GUIDE.md  (+30 more)
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  SECURITY.md  SUPPORT.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature_request.md
.github/workflows/: api-tests.yml  ci.yml  docker-publish.yml  release.yml
behaviors/: __init__.py  agentx_simulation.py  bulk_operations.py  counter_wrap.py  ifxtable.py  ifxtable_config.py  interface_engine.py  mib_boundary_responses.py  resource_limits.py  snmpv3_contexts.py  snmpv3_security.py
config/: advanced.yaml  api_config.yaml  comprehensive.yaml  counter_wrap_test.yaml  enhanced_simulation.yaml  ifxtable.yaml  simple.yaml  snmpv3_security_test.yaml  state_machine_test.yaml  testing.yaml
data/: README.md  ifxtable.snmprec  public.snmprec
deprecated/: quick_performance_test.py  simple_prd_test.py  test_basic.py  validate_test_setup.py
docs/api/: API_EXAMPLES.md  API_TESTING_GUIDE.md  REST_API_DOCUMENTATION.md
docs/development/: CLAUDE.md  COMPLETION_REPORT.md  ENHANCED_CAPABILITIES.md  IFXTABLE_IMPLEMENTATION_PLAN.md  IFXTABLE_IMPLEMENTATION_SUMMARY.md  PERFORMANCE_RESULTS.md  PRD.md  PRD_TESTING_STRATEGY.md  PROJECT_STRUCTURE.md  PROMETHEUS_SNMP_EXPORTER_TESTING.md  SCRIPT_CONSOLIDATION_PLAN.md  TESTING_SUMMARY.md
docs/examples/: README.md  basic_snmp_test.py  demo_ifxtable_solution.py  device_lifecycle_demo.py  drop_demo.py  load_testing.py  snmpv3_examples.py
docs/guides/: ADVANCED_TESTING_GUIDE.md  ADVANCED_USAGE_GUIDE.md  BEST_PRACTICES_GUIDE.md  CONFIGURATION_GUIDE.md  SNMP_COMMANDS_REFERENCE.md  TROUBLESHOOTING.md
examples/: README.md  api_client_demo.py  basic_snmp_test.py  community_variations.py  counter_wrap_demo.py  delay_demo.py  demo_ifxtable_solution.py  device_lifecycle_demo.py  drop_demo.py  load_testing.py  snmpv3_examples.py  snmpv3_security_demo.py
rest_api/: __init__.py  __main__.py  controllers.py  export_import.py  models.py  query_endpoints.py  server.py  simulation_control.py  websocket.py
scripts/deployment/: docker-compose.testing.yml  test_docker.sh
scripts/testing/: run_api_tests.py  test_prd_requirements.py  test_snmp_exporter_integration.py
scripts/tools/: README_OLD.md  cleanup_ports.py  healthcheck.py  quick_docker_test.py  test_config.py
src/: mock_snmp_agent.py
src/behaviors/: __init__.py  agentx_simulation.py  counter_wrap.py  ifxtable_config.py  interface_engine.py  resource_limits.py  snmpv3_contexts.py
src/rest_api/: __init__.py  export_import.py  models.py  query_endpoints.py
state_machine/: __init__.py  core.py  device_types.py
test-reports/: validation-failure.txt
tests/: __init__.py  conftest.py  docker_comprehensive_test.py  docker_integration_test.py  test_api_endpoints.py  test_basic_functionality.py  test_export_import.py  test_performance.py  test_rest_api.py  test_simulation_scenarios.py  test_snmpv3_security.py  test_websocket_integration.py
